// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/Radio passes the snapshot test for basic setup 1`] = `
<View
  accessibilityLabel="Check me!"
  accessibilityRole="radio"
  accessibilityState={
    Object {
      "checked": undefined,
      "disabled": false,
    }
  }
  accessible={true}
  direction="horizontal"
  onLayout={[Function]}
  spacing="xs"
  style={
    Object {
      "alignSelf": "flex-start",
      "borderRadius": undefined,
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "marginVertical": 4,
      "opacity": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 8,
      }
    }
  >
    <View
      accessibilityHint=""
      accessibilityLabel="Press me!"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "borderRadius": undefined,
          "bottom": undefined,
          "display": "flex",
          "elevation": undefined,
          "end": undefined,
          "left": undefined,
          "margin": undefined,
          "marginBottom": undefined,
          "marginEnd": undefined,
          "marginHorizontal": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginStart": undefined,
          "marginTop": undefined,
          "marginVertical": undefined,
          "position": undefined,
          "right": undefined,
          "shadowColor": undefined,
          "shadowOffset": undefined,
          "shadowOpacity": undefined,
          "shadowRadius": undefined,
          "start": undefined,
          "top": undefined,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "borderRadius": 1000,
            "display": "flex",
            "overflow": "hidden",
          }
        }
      >
        <View
          accessible={true}
          checkedBackgroundColor="primary.500"
          checkedBorderColor="primary.500"
          collapsable={false}
          colorScheme="primary"
          errorBorderColor="danger.500"
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#EDF1F7",
                "borderRadius": 1000,
                "display": "flex",
                "height": 24,
                "justifyContent": "center",
                "padding": 5,
                "width": 24,
              },
              Object {
                "backgroundColor": "#EDF1F7",
                "borderBottomColor": undefined,
                "borderBottomWidth": undefined,
                "borderColor": "#EDF1F7",
                "borderEndColor": undefined,
                "borderEndWidth": undefined,
                "borderLeftColor": undefined,
                "borderLeftWidth": undefined,
                "borderRightColor": undefined,
                "borderRightWidth": undefined,
                "borderStartColor": undefined,
                "borderStartWidth": undefined,
                "borderStyle": undefined,
                "borderTopColor": undefined,
                "borderTopWidth": undefined,
                "borderWidth": 2,
                "opacity": undefined,
              },
            ]
          }
        >
          <View
            checkedBackgroundColor="neutral.50"
            onLayout={[Function]}
            style={
              Object {
                "backgroundColor": "#EDF1F7",
                "borderRadius": 1000,
                "display": "flex",
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      scaleFontSize={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "#1A2138",
          "display": "flex",
          "fontFamily": "Poppins-Regular",
          "fontSize": 16.099999999999998,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 22,
        }
      }
      variant="p2"
    >
      Check me!
    </Text>
  </View>
</View>
`;

exports[`Molecules/Radio passes the snapshot test for different color schemes 1`] = `
Array [
  <View
    accessibilityLabel="Primary Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    onLayout={[Function]}
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "borderRadius": undefined,
            "bottom": undefined,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": undefined,
            "right": undefined,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            checkedBackgroundColor="primary.500"
            checkedBorderColor="primary.500"
            collapsable={false}
            colorScheme="primary"
            errorBorderColor="danger.500"
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 24,
                  "justifyContent": "center",
                  "padding": 5,
                  "width": 24,
                },
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": "#EDF1F7",
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": 2,
                  "opacity": undefined,
                },
              ]
            }
          >
            <View
              checkedBackgroundColor="neutral.50"
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 22,
          }
        }
        variant="p2"
      >
        Primary Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Secondary Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    onLayout={[Function]}
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "borderRadius": undefined,
            "bottom": undefined,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": undefined,
            "right": undefined,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            checkedBackgroundColor="secondary.500"
            checkedBorderColor="secondary.500"
            collapsable={false}
            colorScheme="secondary"
            errorBorderColor="danger.500"
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 24,
                  "justifyContent": "center",
                  "padding": 5,
                  "width": 24,
                },
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": "#EDF1F7",
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": 2,
                  "opacity": undefined,
                },
              ]
            }
          >
            <View
              checkedBackgroundColor="neutral.50"
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 22,
          }
        }
        variant="p2"
      >
        Secondary Radio
      </Text>
    </View>
  </View>,
]
`;

exports[`Molecules/Radio passes the snapshot test for different sizes 1`] = `
Array [
  <View
    accessibilityLabel="Small Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    onLayout={[Function]}
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "borderRadius": undefined,
            "bottom": undefined,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": undefined,
            "right": undefined,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            checkedBackgroundColor="primary.500"
            checkedBorderColor="primary.500"
            collapsable={false}
            colorScheme="primary"
            errorBorderColor="danger.500"
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            size="s"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 18,
                  "justifyContent": "center",
                  "padding": 3,
                  "width": 18,
                },
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": "#EDF1F7",
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": 2,
                  "opacity": undefined,
                },
              ]
            }
          >
            <View
              checkedBackgroundColor="neutral.50"
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 22,
          }
        }
        variant="p2"
      >
        Small Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Regular Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    onLayout={[Function]}
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "borderRadius": undefined,
            "bottom": undefined,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": undefined,
            "right": undefined,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            checkedBackgroundColor="primary.500"
            checkedBorderColor="primary.500"
            collapsable={false}
            colorScheme="primary"
            errorBorderColor="danger.500"
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            size="m"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 24,
                  "justifyContent": "center",
                  "padding": 5,
                  "width": 24,
                },
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": "#EDF1F7",
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": 2,
                  "opacity": undefined,
                },
              ]
            }
          >
            <View
              checkedBackgroundColor="neutral.50"
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 22,
          }
        }
        variant="p2"
      >
        Regular Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Large Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    onLayout={[Function]}
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "borderRadius": undefined,
            "bottom": undefined,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": undefined,
            "right": undefined,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            checkedBackgroundColor="primary.500"
            checkedBorderColor="primary.500"
            collapsable={false}
            colorScheme="primary"
            errorBorderColor="danger.500"
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            size="l"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 30,
                  "justifyContent": "center",
                  "padding": 7,
                  "width": 30,
                },
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": "#EDF1F7",
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": 2,
                  "opacity": undefined,
                },
              ]
            }
          >
            <View
              checkedBackgroundColor="neutral.50"
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 18.4,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 26,
          }
        }
        variant="p1"
      >
        Large Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Extra Large Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    onLayout={[Function]}
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "borderRadius": undefined,
            "bottom": undefined,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": undefined,
            "right": undefined,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            checkedBackgroundColor="primary.500"
            checkedBorderColor="primary.500"
            collapsable={false}
            colorScheme="primary"
            errorBorderColor="danger.500"
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            size="xl"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 36,
                  "justifyContent": "center",
                  "padding": 9,
                  "width": 36,
                },
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": "#EDF1F7",
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": 2,
                  "opacity": undefined,
                },
              ]
            }
          >
            <View
              checkedBackgroundColor="neutral.50"
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 18.4,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 26,
          }
        }
        variant="p1"
      >
        Extra Large Radio
      </Text>
    </View>
  </View>,
]
`;

exports[`Molecules/Radio passes the snapshot test for different variants 1`] = `
Array [
  <View
    accessibilityLabel="Filled Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    onLayout={[Function]}
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "borderRadius": undefined,
            "bottom": undefined,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": undefined,
            "right": undefined,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            checkedBackgroundColor="primary.500"
            checkedBorderColor="primary.500"
            collapsable={false}
            colorScheme="primary"
            errorBorderColor="danger.500"
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 24,
                  "justifyContent": "center",
                  "padding": 5,
                  "width": 24,
                },
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": "#EDF1F7",
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": 2,
                  "opacity": undefined,
                },
              ]
            }
            variant="filled"
          >
            <View
              checkedBackgroundColor="neutral.50"
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 22,
          }
        }
        variant="p2"
      >
        Filled Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Outline Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    onLayout={[Function]}
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "borderRadius": undefined,
            "bottom": undefined,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": undefined,
            "right": undefined,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            checkedBackgroundColor={
              Object {
                "dark": "neutral.800",
                "light": "neutral.50",
              }
            }
            checkedBorderColor="primary.500"
            collapsable={false}
            colorScheme="primary"
            errorBorderColor="danger.500"
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 24,
                  "justifyContent": "center",
                  "padding": 5,
                  "width": 24,
                },
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": "#C5CEE0",
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": 2,
                  "opacity": undefined,
                },
              ]
            }
            variant="outline"
          >
            <View
              checkedBackgroundColor="primary.500"
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 22,
          }
        }
        variant="p2"
      >
        Outline Radio
      </Text>
    </View>
  </View>,
]
`;

exports[`Molecules/Radio passes the snapshot test when in a checked state 1`] = `
Array [
  <View
    accessibilityLabel="Checked Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": true,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    onLayout={[Function]}
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "borderRadius": undefined,
            "bottom": undefined,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": undefined,
            "right": undefined,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            checkedBackgroundColor="primary.500"
            checkedBorderColor="primary.500"
            collapsable={false}
            colorScheme="primary"
            errorBorderColor="danger.500"
            focusable={true}
            isChecked={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 24,
                  "justifyContent": "center",
                  "padding": 5,
                  "width": 24,
                },
                Object {
                  "backgroundColor": "#6A7BFF",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": "#6A7BFF",
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": 2,
                  "opacity": undefined,
                },
              ]
            }
            variant="filled"
          >
            <View
              checkedBackgroundColor="neutral.50"
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 22,
          }
        }
        variant="p2"
      >
        Checked Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Checked Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": true,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    onLayout={[Function]}
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "borderRadius": undefined,
            "bottom": undefined,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": undefined,
            "right": undefined,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            checkedBackgroundColor={
              Object {
                "dark": "neutral.800",
                "light": "neutral.50",
              }
            }
            checkedBorderColor="primary.500"
            collapsable={false}
            colorScheme="primary"
            errorBorderColor="danger.500"
            focusable={true}
            isChecked={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 24,
                  "justifyContent": "center",
                  "padding": 5,
                  "width": 24,
                },
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": "#6A7BFF",
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": 2,
                  "opacity": undefined,
                },
              ]
            }
            variant="outline"
          >
            <View
              checkedBackgroundColor="primary.500"
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "#6A7BFF",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 22,
          }
        }
        variant="p2"
      >
        Checked Radio
      </Text>
    </View>
  </View>,
]
`;

exports[`Molecules/Radio passes the snapshot test when in an error state 1`] = `
Array [
  <View
    accessibilityLabel="Error Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    onLayout={[Function]}
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "borderRadius": undefined,
            "bottom": undefined,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": undefined,
            "right": undefined,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            checkedBackgroundColor="primary.500"
            checkedBorderColor="primary.500"
            collapsable={false}
            colorScheme="primary"
            errorBorderColor="danger.500"
            focusable={true}
            isInvalid={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 24,
                  "justifyContent": "center",
                  "padding": 5,
                  "width": 24,
                },
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": "#FF4B42",
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": 2,
                  "opacity": undefined,
                },
              ]
            }
          >
            <View
              checkedBackgroundColor="neutral.50"
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 22,
          }
        }
        variant="p2"
      >
        Error Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Error Radio with message"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    onLayout={[Function]}
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        onLayout={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "borderRadius": undefined,
            "bottom": undefined,
            "display": "flex",
            "elevation": undefined,
            "end": undefined,
            "left": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
            "position": undefined,
            "right": undefined,
            "shadowColor": undefined,
            "shadowOffset": undefined,
            "shadowOpacity": undefined,
            "shadowRadius": undefined,
            "start": undefined,
            "top": undefined,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": 1000,
              "display": "flex",
              "overflow": "hidden",
            }
          }
        >
          <View
            accessible={true}
            checkedBackgroundColor="primary.500"
            checkedBorderColor="primary.500"
            collapsable={false}
            colorScheme="primary"
            errorBorderColor="danger.500"
            errorMessage="This is an error message!"
            focusable={true}
            isInvalid={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": 24,
                  "justifyContent": "center",
                  "padding": 5,
                  "width": 24,
                },
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderBottomColor": undefined,
                  "borderBottomWidth": undefined,
                  "borderColor": "#FF4B42",
                  "borderEndColor": undefined,
                  "borderEndWidth": undefined,
                  "borderLeftColor": undefined,
                  "borderLeftWidth": undefined,
                  "borderRightColor": undefined,
                  "borderRightWidth": undefined,
                  "borderStartColor": undefined,
                  "borderStartWidth": undefined,
                  "borderStyle": undefined,
                  "borderTopColor": undefined,
                  "borderTopWidth": undefined,
                  "borderWidth": 2,
                  "opacity": undefined,
                },
              ]
            }
          >
            <View
              checkedBackgroundColor="neutral.50"
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "#EDF1F7",
                  "borderRadius": 1000,
                  "display": "flex",
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "stretch",
          "borderRadius": undefined,
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 22,
          }
        }
        variant="p2"
      >
        Error Radio with message
      </Text>
    </View>
  </View>,
  <Text
    accessibilityRole="text"
    accessible={true}
    allowFontScaling={true}
    scaleFontSize={true}
    style={
      Object {
        "color": "#FF4B42",
        "display": "flex",
        "fontFamily": "Poppins-Regular",
        "fontSize": 13.799999999999999,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 20,
        "marginBottom": 4,
      }
    }
    variant="caption"
  >
    This is an error message!
  </Text>,
]
`;

exports[`Molecules/Radio passes the snapshot test when using style props 1`] = `
<View
  accessibilityLabel="Button press"
  accessibilityRole="radio"
  accessibilityState={
    Object {
      "checked": undefined,
      "disabled": false,
    }
  }
  accessible={true}
  direction="horizontal"
  onLayout={[Function]}
  spacing="xs"
  style={
    Object {
      "alignSelf": "flex-start",
      "backgroundColor": "#6A7BFF",
      "borderColor": "#C5CEE0",
      "borderRadius": undefined,
      "borderWidth": 2,
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "marginVertical": 4,
      "opacity": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 8,
      }
    }
  >
    <View
      accessibilityHint=""
      accessibilityLabel="Press me!"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      onLayout={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "borderRadius": undefined,
          "bottom": undefined,
          "display": "flex",
          "elevation": undefined,
          "end": undefined,
          "left": undefined,
          "margin": undefined,
          "marginBottom": undefined,
          "marginEnd": undefined,
          "marginHorizontal": undefined,
          "marginLeft": undefined,
          "marginRight": undefined,
          "marginStart": undefined,
          "marginTop": undefined,
          "marginVertical": undefined,
          "position": undefined,
          "right": undefined,
          "shadowColor": undefined,
          "shadowOffset": undefined,
          "shadowOpacity": undefined,
          "shadowRadius": undefined,
          "start": undefined,
          "top": undefined,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "borderRadius": 1000,
            "display": "flex",
            "overflow": "hidden",
          }
        }
      >
        <View
          accessible={true}
          checkedBackgroundColor="primary.500"
          checkedBorderColor="primary.500"
          collapsable={false}
          colorScheme="primary"
          errorBorderColor="danger.500"
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#EDF1F7",
                "borderRadius": 1000,
                "display": "flex",
                "height": 24,
                "justifyContent": "center",
                "padding": 5,
                "width": 24,
              },
              Object {
                "backgroundColor": "#EDF1F7",
                "borderBottomColor": undefined,
                "borderBottomWidth": undefined,
                "borderColor": "#EDF1F7",
                "borderEndColor": undefined,
                "borderEndWidth": undefined,
                "borderLeftColor": undefined,
                "borderLeftWidth": undefined,
                "borderRightColor": undefined,
                "borderRightWidth": undefined,
                "borderStartColor": undefined,
                "borderStartWidth": undefined,
                "borderStyle": undefined,
                "borderTopColor": undefined,
                "borderTopWidth": undefined,
                "borderWidth": 2,
                "opacity": undefined,
              },
            ]
          }
        >
          <View
            checkedBackgroundColor="neutral.50"
            onLayout={[Function]}
            style={
              Object {
                "backgroundColor": "#EDF1F7",
                "borderRadius": 1000,
                "display": "flex",
                "height": "100%",
                "width": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      scaleFontSize={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "#1A2138",
          "display": "flex",
          "fontFamily": "Poppins-Regular",
          "fontSize": 16.099999999999998,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 22,
        }
      }
      variant="p2"
    >
      Button press
    </Text>
  </View>
</View>
`;
